--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,13 @@
         android:theme="@style/Theme.NahalOman"
         tools:targetApi="31">
         <activity
+            android:name=".business_registeration"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.NahalOman.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.NahalOman.NoActionBar"></activity>
         <activity
             android:name=".customer_register"
             android:exported="false" />
